# mabinogi-rice-collector

./: .gitignore  LICENSE  README.md  mabinogi.service  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
